--- a/src/klikev.sitetheme/klikev/sitetheme/resources/less/signin.less
+++ b/src/klikev.sitetheme/klikev/sitetheme/resources/less/signin.less
@@ -32,7 +32,9 @@
 .app-signin-group {
     padding: @line-height-computed 0;
     background: @navbar-default-bg;
-    border-bottom: 1px dotted @gray-light;
+    .app-signin-control {
+        border-bottom: 1px dotted @gray-light;
+    }
     label,
     .signin-label {
         font-weight: 300;
