--- a/src/klikev.sitetheme/klikev/sitetheme/resources/_includes/navbar.html
+++ b/src/klikev.sitetheme/klikev/sitetheme/resources/_includes/navbar.html
@@ -7,15 +7,12 @@
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
     </button>
-    <a class="navbar-brand" href="#">Brand</a>
+    <a class="navbar-brand visible-xs" href="#">Klik e.V. Navigation</a>
   </div>
 
-  <p class="navbar-text pull-right">Signed in as <a href="#" class="navbar-link">John Doe</a></p>
-
   <div class="collapse navbar-collapse app-navbar-collapse">
-    <ul class="nav navbar-nav" id="app-navbar-nav">
-      <li class="active"><a href="#">Link</a></li>
-      <li><a href="#">Link</a></li>
+    <ul class="nav navbar-nav navbar-right" id="app-navbar-nav">
+      <li><a href="#">Projekt</a></li>
       <li class="dropdown">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
         <ul class="dropdown-menu">
@@ -26,24 +23,11 @@
           <li><a href="#">One more separated link</a></li>
         </ul>
       </li>
-    </ul>
-    <form class="navbar-form navbar-left" role="search">
-      <div class="form-group">
-        <input type="text" class="form-control" placeholder="Search">
-      </div>
-      <button type="submit" class="btn btn-default">Submit</button>
-    </form>
-    <ul class="nav navbar-nav navbar-right">
-      <li><a href="#">Link</a></li>
-      <li class="dropdown">
-        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
-        <ul class="dropdown-menu">
-          <li><a href="#">Action</a></li>
-          <li><a href="#">Another action</a></li>
-          <li><a href="#">Something else here</a></li>
-          <li><a href="#">Separated link</a></li>
-        </ul>
-      </li>
+      <li class="active"><a href="#">Aktuelles</a></li>
+      <li><a href="#">Mitarbeit</a></li>
+      <li><a href="#">Spenden</a></li>
+      <li><a href="#">Kontakt</a></li>
+      <li><a href="#">f</a></li>
     </ul>
   </div><!-- /.navbar-collapse -->
 </div>
