--- a/src/klikev.sitetheme/klikev/sitetheme/resources/_includes/webfonts.html
+++ b/src/klikev.sitetheme/klikev/sitetheme/resources/_includes/webfonts.html
@@ -1,6 +1,6 @@
 <script type="text/javascript">
   WebFontConfig = {
-    google: { families: [ 'Open+Sans:400,600,700,300:latin' ] }
+    google: { families: [ 'Source+Sans+Pro:400,700,400italic:latin', 'Oswald:400,300,700:latin' ] }
   };
   (function() {
     var wf = document.createElement('script');
