--- a/src/klikev.sitetheme/klikev/sitetheme/resources/less/signin.less
+++ b/src/klikev.sitetheme/klikev/sitetheme/resources/less/signin.less
@@ -32,16 +32,22 @@
 .app-signin-group {
     padding: 0;
     background: @navbar-default-bg;
-    .app-signin-control {
-        padding: @line-height-computed 0 floor((@line-height-computed * 2));
-        &.app-signin-control-bordered {
-            border-bottom: 1px dotted @gray-light;
-        }
+    &.app-signin-group-text {
+        margin-top: @line-height-computed;
+        padding: ceil((@line-height-computed * 2)) 0;
+        border-top: 1px dotted @gray-light;
     }
     label,
     .signin-label {
         font-weight: 300;
         color: @gray;
+    }
+}
+
+.app-signin-control {
+    padding: @line-height-computed 0 floor((@line-height-computed * 2));
+    &.app-signin-control-bordered {
+        border-bottom: 1px dotted @gray-light;
     }
 }
 
