--- a/src/klikev.sitetheme/klikev/sitetheme/resources/_includes/brandbar.html
+++ b/src/klikev.sitetheme/klikev/sitetheme/resources/_includes/brandbar.html
@@ -1,14 +1,14 @@
 <div class="app-brandbar">
     <div class="container">
         <div class="row">
-            <div class="col-xs-12 col-sm-3">
+            <div class="col-xs-12 col-sm-9 col-sm-push-3">
+                {% include navbar.html %}
+            </div>
+            <div class="col-xs-12 col-sm-3 col-sm-pull-9">
                 <a class="app-brand" href="/">
                     <img class="img-responsive" src="{{ page.base_url }}assets/img/klik-ev-logo.png"
                         title="Klik eV" />
                 </a>
-            </div>
-            <div class="col-xs-12 col-sm-9">
-                {% include navbar.html %}
             </div>
         </div>
     </div>
