--- a/src/klikev.sitetheme/klikev/sitetheme/resources/_includes/navbar.html
+++ b/src/klikev.sitetheme/klikev/sitetheme/resources/_includes/navbar.html
@@ -11,7 +11,7 @@
   </div>
 
   <div class="collapse navbar-collapse app-navbar-collapse">
-    <ul class="nav navbar-nav navbar-right" id="app-navbar-nav">
+    <ul class="nav navbar-nav navbar-right app-navbar-nav" id="app-navbar-nav">
       <li><a href="#">Projekt</a></li>
       <li class="dropdown">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
