--- a/src/klikev.sitetheme/klikev/sitetheme/resources/less/settings.less
+++ b/src/klikev.sitetheme/klikev/sitetheme/resources/less/settings.less
@@ -6,6 +6,7 @@
 // Green (rgb: 142, 192, 94)
 @app-primary:                   #f37256;
 @app-secondary:                 #fac0ac;
+@app-tertiary:                  #f69880;
 
 // Red (rgb: 237, 98, 98)
 @app-danger:                    #ed6262;
@@ -27,3 +28,32 @@
 
 // Font awesome font path
 @fa-font-path:                  "../../assets/fonts";
+
+// Basics of a navbar
+@navbar-border-radius:             0;
+@navbar-padding-horizontal:        floor((@grid-gutter-width / 2));
+@navbar-padding-vertical:          ((@navbar-height - @line-height-computed) / 2);
+@navbar-collapse-max-height:       340px;
+
+@navbar-default-color:             #777;
+@navbar-default-bg:                @app-tertiary;
+@navbar-default-border:            darken(@navbar-default-bg, 6.5%);
+
+// Navbar links
+@navbar-default-link-color:                @text-color;
+@navbar-default-link-hover-color:          #333;
+@navbar-default-link-hover-bg:             transparent;
+@navbar-default-link-active-color:         #555;
+@navbar-default-link-active-bg:            darken(@navbar-default-bg, 6.5%);
+@navbar-default-link-disabled-color:       #ccc;
+@navbar-default-link-disabled-bg:          transparent;
+
+// Navbar brand label
+@navbar-default-brand-color:               @navbar-default-link-color;
+@navbar-default-brand-hover-color:         darken(@navbar-default-brand-color, 10%);
+@navbar-default-brand-hover-bg:            transparent;
+
+// Navbar toggle
+@navbar-default-toggle-hover-bg:           #ddd;
+@navbar-default-toggle-icon-bar-bg:        #888;
+@navbar-default-toggle-border-color:       #ddd;
