--- a/src/klikev.sitetheme/klikev/sitetheme/resources/less/navbar.less
+++ b/src/klikev.sitetheme/klikev/sitetheme/resources/less/navbar.less
@@ -4,4 +4,13 @@
 
 .app-navbar {
   font-family: @headings-font-family;
+  font-weight: 400;
+  text-transform: uppercase;
+  @media screen and (min-width: @screen-sm-min) {
+    background-color: transparent;
+  }
+  .navbar-nav {
+
+  }
+
 }
