Add sitecontent package and rebuild theme

--- a/src/klikev.sitetheme/klikev/sitetheme/resources/_includes/footer.html
+++ b/src/klikev.sitetheme/klikev/sitetheme/resources/_includes/footer.html
@@ -1,8 +1,15 @@
 <footer class="app-footer" id="app-footer" role="contentinfo">
     <div class="container">
+      <div class="app-footer-nav">
+        <ul class="nav nav-pills app-footer-nav-pills" id="app-footer-nav-pills">
+          <li><a href="#">Projekt</a></li>
+          <li><a href="#">Aktuelles</a></li>
+          <li><a href="#">Mitarbeit</a></li>
+          <li><a href="#">Spenden</a></li>
+          <li><a href="#">Kontakt</a></li>
+          <li><a href="#">facebook</a></li>
+        </ul>
+      </div>
       <p>kik e.V. &copy; 2014 &ndash; All rights reserved</p>
-        <p>Code licensed under
-            <a href="https://github.com/twbs/bootstrap/blob/master/LICENSE">MIT</a>, documentation under
-            <a href="http://creativecommons.org/licenses/by/3.0/">CC BY 3.0</a>.</p>
     </div>
 </footer>
