--- a/src/klikev.sitetheme/klikev/sitetheme/resources/less/application.less
+++ b/src/klikev.sitetheme/klikev/sitetheme/resources/less/application.less
@@ -9,7 +9,7 @@
 .app-header {
   margin-bottom: @jumbotron-padding;
   color: @jumbotron-color;
-  background:url(../assets/img/header-bg.png) no-repeat 50% 0 @app-secondary;
+  background:url(../assets/img/header-bg-01.png) no-repeat 50% 0 @app-secondary;
   > hr {
     border-top-color: darken(@jumbotron-bg, 10%);
   }
@@ -61,5 +61,13 @@
   border-color: @brand-primary;
   > h1 {
     text-transform: uppercase;
+  }
+}
+
+#content-core {
+  h2,
+  h3,
+  h4 {
+    color: @app-primary;
   }
 }
