--- a/src/klikev.sitetheme/klikev/sitetheme/resources/less/footer.less
+++ b/src/klikev.sitetheme/klikev/sitetheme/resources/less/footer.less
@@ -8,3 +8,10 @@
     background: @gray-lighter;
     text-align: center;
 }
+
+.app-footer-nav {
+  .center-block();
+  @media screen and (min-width: @screen-sm-min) {
+    width: @screen-sm;
+  }
+}
