Add custom frontpage and donation templates

--- a/src/klikev.sitetheme/klikev/sitetheme/resources/less/application.less
+++ b/src/klikev.sitetheme/klikev/sitetheme/resources/less/application.less
@@ -56,6 +56,27 @@
   }
 }
 
+.splashbox {
+  padding: @line-height-computed 0;
+  .splashbox-header {
+    padding: @line-height-computed;
+    text-align: center;
+  }
+}
+
+.app-box-header {
+  padding: @padding-small-vertical @padding-base-horizontal;
+  background: @brand-primary;
+  color: #fff;
+  text-transform: uppercase;
+}
+
+.app-box-content {
+  padding: @line-height-computed;
+  border-left: 1px solid @gray;
+}
+
+
 .page-header {
   border-width: 4px;
   border-color: @brand-primary;
