Add donation template

--- a/src/klikev.sitetheme/klikev/sitetheme/resources/less/application.less
+++ b/src/klikev.sitetheme/klikev/sitetheme/resources/less/application.less
@@ -64,8 +64,17 @@
   }
 }
 
+.splashbox-icon {
+  .center-block();
+  .square(@navbar-height);
+  border: 1px solid @gray-light;
+  border-radius: 50%;
+  text-align: center;
+}
+
 .app-box-header {
   padding: @padding-small-vertical @padding-base-horizontal;
+  margin: @line-height-computed 0;
   background: @brand-primary;
   color: #fff;
   text-transform: uppercase;
