Update gruntfile and rebuild

--- a/src/klikev.sitetheme/klikev/sitetheme/resources/_includes/footer.html
+++ b/src/klikev.sitetheme/klikev/sitetheme/resources/_includes/footer.html
@@ -10,6 +10,6 @@
           <li><a href="#">facebook</a></li>
         </ul>
       </div>
-      <p>kik e.V. &copy; 2014 &ndash; All rights reserved</p>
+      <p>kik e.V. &copy; 2014 &ndash; All rights reserved. <a href="/kontakt">Impressum</a></p>
     </div>
 </footer>
