--- a/src/klikev.sitetheme/klikev/sitetheme/resources/less/application.less
+++ b/src/klikev.sitetheme/klikev/sitetheme/resources/less/application.less
@@ -61,12 +61,14 @@
   .splashbox-header {
     padding: @line-height-computed;
     text-align: center;
+    color: @gray-light;
   }
 }
 
 .splashbox-icon {
   .center-block();
   .square(@navbar-height);
+  padding-top: @padding-base-vertical;
   border: 1px solid @gray-light;
   border-radius: 50%;
   text-align: center;
