--- a/src/klikev.sitetheme/klikev/sitetheme/resources/less/styles.less
+++ b/src/klikev.sitetheme/klikev/sitetheme/resources/less/styles.less
@@ -19,5 +19,6 @@
 @import "signin.less";
 @import "brandbar.less";
 @import "navbar.less";
+@import "logobar.less";
 @import "footer.less";
 @import "application.less";
