--- a/src/klikev.sitetheme/klikev/sitetheme/resources/_layouts/landingpage.html
+++ b/src/klikev.sitetheme/klikev/sitetheme/resources/_layouts/landingpage.html
@@ -16,6 +16,12 @@
       <div class="container app-header-claim">
         <div class="h1 app-header-claim-title">{{ page.title }}</div>
         <div class="h2 app-header-claim-abstract">{{ page.lead }}</div>
+        <p class="lead app-header-claim-lead">
+          Der klik Kontaktladen ist ein Angebot an junge Menschen,
+          deren Lebensmittelpunkt die Straße ist. Wir bieten einen Ort,
+          an dem sich die jungen Menschen zurückziehen können und unterstützen
+          aktiv bei der Verbesserung der Lebensbedingungen.
+        </p>
       </div>
     </div>
 
