Update and rebuild theme

--- a/src/klikev.sitetheme/klikev/sitetheme/resources/_layouts/landingpage.html
+++ b/src/klikev.sitetheme/klikev/sitetheme/resources/_layouts/landingpage.html
@@ -30,6 +30,7 @@
           {{ content }}
         </div>
     </div>
+    {% include actionbar.html %}
     {% include logobar.html %}
     {% include footer.html %}
     {% include javascript.html %}
