--- a/src/klikev.sitetheme/klikev/sitetheme/resources/_includes/logobar.html
+++ b/src/klikev.sitetheme/klikev/sitetheme/resources/_includes/logobar.html
@@ -1,55 +1,57 @@
 <div class="app-logobar" id="app-logobar">
   <div class="container app-logobar-section">
-    <h5>Kooperationspartner</h5>
     <div class="row">
-      <div class="col-xs-6">
-        <a href="#" class="thumbnail">
-          <img class="xximg-polaroid" src="{{ page.base_url }}assets/img/fixpunkt.png"
-              title="Klik eV" />
-        </a>
+      <div class="col-xs-12 col-sm-4">
+        <h5>Kooperationspartner</h5>
+        <div class="row">
+          <div class="col-xs-6">
+            <a href="/kontakt" class="thumbnail">
+              <img class="xximg-polaroid" src="{{ page.base_url }}assets/img/fixpunkt.jpg"
+                  title="Klik eV" />
+            </a>
+          </div>
+          <div class="col-xs-6">
+            <a href="/kontakt" class="thumbnail">
+              <img class="img-polaroid" src="{{ page.base_url }}assets/img/spi.jpg"
+                  title="Klik eV" />
+            </a>
+          </div>
+        </div>
       </div>
-      <div class="col-xs-6">
-        <a href="#" class="thumbnail">
-          <img class="img-polaroid" src="{{ page.base_url }}assets/img/spi.png"
-              title="Klik eV" />
-        </a>
-      </div>
-    </div>
-  </div>
-  <div class="container app-logobar-section">
-    <h5>Förderer</h5>
-    <div class="row">
-      <div class="col-xs-6">
-        <a href="#" class="thumbnail">
-          <img class="img-polaroid" src="{{ page.base_url }}assets/img/aktion-mensch.png"
-              title="Klik eV" />
-        </a>
-      </div>
-      <div class="col-xs-6">
-        <a href="#" class="thumbnail">
-          <img class="img-polaroid" src="{{ page.base_url }}assets/img/koep-logo.png"
-              title="Klik eV" />
-        </a>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-xs-12 col-md-4">
-        <a href="#" class="thumbnail">
-          <img class="img-polaroid" src="{{ page.base_url }}assets/img/skw.png"
-              title="Klik eV" />
-        </a>
-      </div>
-      <div class="col-xs-12 col-md-4">
-        <a href="#" class="thumbnail">
-          <img class="img-polaroid" src="{{ page.base_url }}assets/img/spitzenverband.png"
-              title="Klik eV" />
-        </a>
-      </div>
-      <div class="col-xs-12 col-md-4">
-        <a href="#" class="thumbnail">
-          <img class="img-polaroid" src="{{ page.base_url }}assets/img/haleakala.png"
-              title="Klik eV" />
-        </a>
+      <div class="col-xs-12 col-sm-8">
+        <h5>Förderer</h5>
+        <div class="row">
+          <div class="col-xs-12 col-md-2">
+            <a href="/kontakt" class="thumbnail">
+              <img class="img-polaroid" src="{{ page.base_url }}assets/img/aktion-mensch.jpg"
+                  title="Klik eV" />
+            </a>
+          </div>
+          <div class="col-xs-12 col-md-2">
+            <a href="/kontakt" class="thumbnail">
+              <img class="img-polaroid" src="{{ page.base_url }}assets/img/johannitische-stiftung.jpg"
+                  title="Klik eV" />
+            </a>
+          </div>
+          <div class="col-xs-12 col-md-2">
+            <a href="/kontakt" class="thumbnail">
+              <img class="img-polaroid" src="{{ page.base_url }}assets/img/skw.jpg"
+                  title="Klik eV" />
+            </a>
+          </div>
+          <div class="col-xs-12 col-md-2">
+            <a href="/kontakt" class="thumbnail">
+              <img class="img-polaroid" src="{{ page.base_url }}assets/img/paritaetische.jpg"
+                  title="Klik eV" />
+            </a>
+          </div>
+          <div class="col-xs-12 col-md-2">
+            <a href="/kontakt" class="thumbnail">
+              <img class="img-polaroid" src="{{ page.base_url }}assets/img/haleakala.jpg"
+                  title="Klik eV" />
+            </a>
+          </div>
+        </div>
       </div>
     </div>
   </div>
