--- a/src/klikev.sitetheme/klikev/sitetheme/resources/less/application.less
+++ b/src/klikev.sitetheme/klikev/sitetheme/resources/less/application.less
@@ -80,6 +80,9 @@
   background: @brand-primary;
   color: #fff;
   text-transform: uppercase;
+  .app-box-headline > a {
+    color: #fff;
+  }
 }
 
 .app-box-content {
@@ -102,4 +105,10 @@
   h4 {
     color: @app-primary;
   }
+}
+
+// Actionbar frontpage
+.app-actionbar {
+  padding: @navbar-height 0;
+  border-top: 1px solid @gray-light;
 }
