Add header images and rebuild

--- a/src/klikev.sitetheme/klikev/sitetheme/resources/less/application.less
+++ b/src/klikev.sitetheme/klikev/sitetheme/resources/less/application.less
@@ -33,6 +33,24 @@
   }
 }
 
+// Alternative header images based on body classes
+
+.section-das-project .app-header {
+  background-image:url(../assets/img/header-bg-02.png);
+}
+.section-aktuelles .app-header {
+  background-image:url(../assets/img/header-bg-03.png);
+}
+.section-spenden .app-header {
+  background-image:url(../assets/img/header-bg-04.png);
+}
+.section-mitarbeit .app-header {
+  background-image:url(../assets/img/header-bg-05.png);
+}
+.section-kontakt .app-header {
+  background-image:url(../assets/img/header-bg-06.png);
+}
+
 .app-header-claim {
   margin-top: ceil((@navbar-height * 1.5));
   padding: @jumbotron-padding;
