Update frontpage view and rebuild theme

--- a/src/klikev.sitetheme/klikev/sitetheme/resources/less/application.less
+++ b/src/klikev.sitetheme/klikev/sitetheme/resources/less/application.less
@@ -108,6 +108,10 @@
   border-left: 1px solid @gray;
 }
 
+.app-box-item-title {
+  border-bottom: 1px solid @text-color;
+}
+
 
 .page-header {
   border-width: 4px;
