--- a/src/klikev.sitetheme/klikev/sitetheme/resources/less/footer.less
+++ b/src/klikev.sitetheme/klikev/sitetheme/resources/less/footer.less
@@ -7,11 +7,14 @@
     border-top: 1px solid @gray-light;
     background: @gray-lighter;
     text-align: center;
+    a {
+      color: @text-color;
+    }
 }
 
 .app-footer-nav {
   .center-block();
   @media screen and (min-width: @screen-sm-min) {
-    width: @screen-sm;
+    width: 600px;
   }
 }
