--- a/src/klikev.sitetheme/klikev/sitetheme/resources/less/signin.less
+++ b/src/klikev.sitetheme/klikev/sitetheme/resources/less/signin.less
@@ -26,12 +26,13 @@
 }
 
 .app-signin-form {
-    
+
 }
 
 .app-signin-group {
     padding: 0;
-    background: @navbar-default-bg;
+    margin-bottom: 0;
+    background: #f2f2f2;
     &.app-signin-group-text {
         margin-top: @line-height-computed;
         padding: ceil((@line-height-computed * 2)) 0;
