Add landingpage handler

--- a/src/klikev.sitetheme/klikev/sitetheme/resources/less/application.less
+++ b/src/klikev.sitetheme/klikev/sitetheme/resources/less/application.less
@@ -63,10 +63,7 @@
     }
   }
   .app-header-claim-abstract {
-    //margin-bottom: (@jumbotron-padding / 2);
-    //font-family: @font-family-base;
-    //font-size: @jumbotron-font-size;
-    //font-weight: 200;
+    margin-top: 0;
     text-transform: uppercase;
   }
   @media screen and (min-width: @screen-sm-min) {
